# rezoud_ayiti_agents_experiment

./: README.md  pyproject.toml  report.json  report.md
src/haitian_news_reporter/: crew.py  main.py
src/haitian_news_reporter/config/: agents.yaml  tasks.yaml
